force-app/main/default/objects/Player_Statistics__c/Player_Statistics__c.object-meta.xml
<CustomObject>
    <label>Player Statistics</label>
    <nameField>
        <label>Player Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Player Statistics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>