force-app/main/default/objects/Player_Statistics__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Player Statistics</relationshipLabel>
    <relationshipName>Player_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>