force-app/main/default/objects/Player_Statistics__c/fields/Total_Draws__c.field-meta.xml
<CustomField>
    <fullName>Total_Draws__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Draws</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>