force-app/main/default/objects/Player_Statistics__c/fields/Total_Games__c.field-meta.xml
<CustomField>
    <fullName>Total_Games__c</fullName>
    <formula>Total_Wins__c + Total_Losses__c + Total_Draws__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Games</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>