force-app/main/default/objects/Player_Statistics__c/fields/Total_Wins__c.field-meta.xml
<CustomField>
    <fullName>Total_Wins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Wins</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>