force-app/main/default/objects/Player_Statistics__c/fields/Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Win_Percentage__c</fullName>
    <formula>IF(Total_Games__c &gt; 0, (Total_Wins__c / Total_Games__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>